edit scss menu/footer

--- a/src/components/Runman.scss
+++ b/src/components/Runman.scss
@@ -43,7 +43,7 @@
     width: 45%;
     /* border: 1px solid blue; */
 
-    z-index: 9999;
+    // z-index: 1;
 
     .runman_left {
       width: 13%;
