--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -223,34 +223,31 @@ p, a {
                 margin-bottom: 40px;
                 display: flex;
 
-                .y-page-title {
-                    margin-right: 30px;
-                    list-style: none;
+            .y-menu-section {
+                .y-menu-section-title {
+                    .y-menu-section-icon {
+                            width: 36px;
+                            height: 36px;
 
-                    li {
-                        letter-spacing: 3px;
-                        font-weight: bold;
-                        line-height: 40px;
+                            img {
+                                width: 100%;
+                                object-fit: cover;
+                            }
                     }
+                    a:hover {
 
+                    }
                 }
 
-                .y-page-links {
-                    list-style: none;
-
+                .y-menu-section-links {
                     li {
-                        letter-spacing: 2px;
-                        line-height: 40px;
+                        a:hover {
+                            
+                        }
                     }
-
                 }
-
             }
-            .y-menu-links {
-                width: 100%;
-                padding: 0 40px;
-                margin-bottom: 40px;
-            }
+        }
             
             .y-social-media {
                 width: 100%;
@@ -278,6 +275,7 @@ p, a {
 
 @media (min-width:391px) {
     .y-btn-wrap-opened {
+        z-index: 10000;
         width: calc(100% - 80px);
         top: 17px;
         right: 43px;
@@ -312,11 +310,11 @@ p, a {
                 padding: 0 200px;
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: space-between;
                 align-items: center;
                 
                 // min-width: 500px;
-                max-width: 1320px;
+                max-width: 1520px;
                 .y-menu-search {
                     height: 55px;
                     min-width: 300px;
@@ -343,21 +341,46 @@ p, a {
                     margin-bottom: 40px;
                     display: flex;
     
-                    .y-page-title {
-                        margin-right: 100px;
+                .y-menu-section {
+                    width: 20%;
+                    .y-menu-section-title {
+                        font-size: 40px;
+                        font-weight: bold;
+                        color: $main-blue;
+                        margin-bottom: 30px;
+                        display: flex;
+                        align-items: center;
+                        .y-menu-section-icon {
+                                width: 36px;
+                                height: 36px;
+                                margin-right: 20px;
+                                img {
+                                    width: 100%;
+                                    object-fit: cover;
+                                }
+                        }
+                        a:hover {
+                            cursor: pointer;
+                        }
                     }
-    
-                    .y-page-links {
-    
+
+                    .y-menu-section-links {
+                        margin-left: 60px;
+
+                        li {
+                            font-size: 24px;
+                            font-weight: bold;
+                            letter-spacing: 2px;
+                            line-height: 1.2;
+                            a:hover {
+                                cursor: pointer;
+                                color: $main-blue;
+                                text-decoration: underline;
+                            }
+                        }
                     }
-    
                 }
-                .y-menu-links {
-                    width: 100%;
-                    padding: 0 40px;
-                    margin-bottom: 40px;
                 }
-                
                 .y-social-media {
                     padding: 0 80px;
                     padding-bottom: 30px;
