--- a/src/03-shop/styles/03-shop-card.scss
+++ b/src/03-shop/styles/03-shop-card.scss
@@ -27,6 +27,7 @@ $card-btn: #80b938;
         border-bottom: 3px solid #333;
         aspect-ratio: 16/9;
         overflow: hidden;
+        position: relative;
         img {
           width: 100%;
           height: 100%;
@@ -41,6 +42,13 @@ $card-btn: #80b938;
           text-align: center;
           writing-mode: vertical-lr;
           letter-spacing: 0.8rem;
+        }
+        i{
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          color: #fff;
+          font-size: 50px;
         }
       }
       .r-card-body {
