--- a/src/04-product/components/style/ProductCard.scss
+++ b/src/04-product/components/style/ProductCard.scss
@@ -77,7 +77,7 @@ $main-border-radius: 8px;
         top: 40%;
         right: -15%;
     }
-    .a-iconWrapper {
+    .a-saleWrapper {
         width: 100px;
     }
     .a-discountIconWrapper img {
