--- a/src/04-product/components/style/YellowWave2.scss
+++ b/src/04-product/components/style/YellowWave2.scss
@@ -22,12 +22,12 @@ $wave-height: 40px;
         width: 100%;
         height: 120px;
         background: {
-            // image: url(../../../../public/04-product/img/wave-1920.png);
-            // repeat: no-repeat;
+            image: url(../../../../public/04-product/img/wave-1920.png);
             position: 50% 0;
             size: 1920px 100px;
         }
-        animation: animate 3.5s linear infinite;
+        animation:
+        a-prpductWave-animate 5s linear infinite;
         z-index: 100;
         animation-delay: 0.3s;
         
