add scroll scss

--- a/src/05-member/style/profile-pages/Orders.scss
+++ b/src/05-member/style/profile-pages/Orders.scss
@@ -163,4 +163,19 @@
       }
     }
   }
+
+  .s-o-card::-webkit-scrollbar-track {
+
+  }
+  .s-o-card::-webkit-scrollbar {
+    width: 10px;
+    height: 8px;
+    
+  }
+
+  .s-o-card::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: red;
+    
+  }
 }
