--- a/src/01-cart/styles/RemoveItemBtn.scss
+++ b/src/01-cart/styles/RemoveItemBtn.scss
@@ -43,10 +43,8 @@ $border-radius-button: 8px;
         width: 20px;
         aspect-ratio: 1/1;
 
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
+        i {
+            font-size: 20px;
         }  
     }
     
@@ -68,13 +66,16 @@ $border-radius-button: 8px;
         padding: 8px 35px;
     
         .y-remove-item-icon {
-            img {
-                
+            i {
+                font-size: 22px;
             }
         }
 
+
         .y-remove-item {
             font-size: 20px;
+
         }
+        
     }
 }
