--- a/src/04-product/components/style/YellowWave2.scss
+++ b/src/04-product/components/style/YellowWave2.scss
@@ -31,7 +31,7 @@ $wave-height: 40px;
         z-index: 100;
         animation-delay: 0.3s;
         
-        @keyframes animate {
+        @keyframes a-prpductWave-animate {
             0% {
                 background-position-x: 0px;
             }
