--- a/src/04-product/components/style/ProductCard.scss
+++ b/src/04-product/components/style/ProductCard.scss
@@ -26,24 +26,6 @@ $main-border-radius: 8px;
     align-items: center;
 }
 
-    %h1 {
-        font-size: 48px;
-    }
-    %h2 {
-        font-size: 36px;
-    }
-    %h3 {
-        font-size: 20px;
-        color: #2B325C;
-        font-weight: 500;
-    }
-    %h4 {
-        font-size: 18px;
-    }
-    %p{
-        font-size: 16px;
-    }
-
 .a-produtCardWrapper {
     width: 25%;
     display: flex;
@@ -70,7 +52,8 @@ $main-border-radius: 8px;
     }
     .a-productCardTitle {
         @extend %a-flex;
-        @extend %h3;
+        color: $main-blue;
+        font-size: 18px;
     }
     .a-discountIconWrapper {
         position: absolute;
