--- a/src/04-product/components/style/ProductFilter.scss
+++ b/src/04-product/components/style/ProductFilter.scss
@@ -69,8 +69,9 @@ justify-content: center;
   }
 }
 .a-searchBarWrapper {
-  width: 160px;
-  height: 300px;
+  margin: 50px 50px 0 30px;
+  width: 200px;
+  height: 400px;
   background-color: $main-yellow;
   border-radius: 8px;
   position: relative;
@@ -78,7 +79,7 @@ justify-content: center;
 .a-aladdinWrapper {
   width: 120px;
   position: absolute;
-  top: 100px;
+  top: -70px;
   left: 10px;
   img {
     width: 100%;
