add modals into related js(only use ModalNotification)

--- a/src/05-member/style/profile-pages/Orders.scss
+++ b/src/05-member/style/profile-pages/Orders.scss
@@ -110,7 +110,7 @@
         // overflow: auto;
         // background-color: bisque;
 
-        /* border: 1px solid green; */
+        // border: 1px solid green;
 
         .s-o-data-detail {
           display: flex;
@@ -119,7 +119,7 @@
           position: relative;
           padding: 15px 0;
 
-          /* border: 1px solid green; */
+          // border: 1px solid green;
 
           .s-o-line-d {
             width: 100%;
@@ -134,8 +134,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            width: 170px;
 
-            /* border: 1px solid pink; */
+            // border: 1px solid pink;
 
             .s-o-question-d {
               margin-bottom: 15px;
@@ -162,20 +163,43 @@
         visibility: 1;
       }
     }
+    .s-o-data-details-out::-webkit-scrollbar-track {
+    }
+    .s-o-data-details-out::-webkit-scrollbar {
+      width: 6px;
+      // height: 30px;
+    }
+
+    .s-o-data-details-out::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: #797878;
+    }
+  }
+
+  @media (max-width: 991px) {
+    .s-o-card {
+      height: 700px;
+
+      .s-o-data {
+        width: 500px;
+      }
+
+      .s-o-data-details-out {
+        width: 500px;
+      }
+    }
   }
 
   .s-o-card::-webkit-scrollbar-track {
-
   }
+
   .s-o-card::-webkit-scrollbar {
     width: 10px;
-    height: 8px;
-    
+    height: 10px;
   }
 
   .s-o-card::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: red;
-    
+    background-color: #b1b1b1;
   }
 }
