--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -5,23 +5,9 @@
   right: 0;
   bottom: 0;
   background-color: rgba(83, 83, 83, 75%);
+  z-index: 9999;
+
   .s_modal_body {
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // min-height: 100vh;
-    // border: 1px solid red;
-    background-color: rgba(83, 83, 83, 75%);
-    // top: 50%;
-    // left: 50%;
-    // top: 50%;
-    // left: 50%;
-
-    // right: auto;
-    // bottom: auto;
-    // margin-right: -50%;
-    // transform: translate(50%, 50%);
-
     position: absolute;
     top: 50%;
     left: 50%;
@@ -35,6 +21,7 @@
       box-shadow: 5px 5px 0 #113f75;
       overflow: hidden;
       border-radius: 10px 10px 6px 6px;
+
       .modal-content {
         padding-bottom: 10px;
         border-radius: 10px;
@@ -46,12 +33,14 @@
         flex-direction: column;
         border-radius: 10px 10px 6px 6px;
         // position: relative;
+
         .modal-header {
           border-bottom: 3px solid #113f75;
           height: 51px;
           padding: 12px;
           position: relative;
           // border: 1px solid green;
+
           .modal-title {
             text-align: center;
             font-size: 24px;
@@ -71,6 +60,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            cursor: pointer;
 
             // border: 1px solid blue;
             i {
@@ -115,6 +105,7 @@
             background-color: #113f75;
             font-weight: 900;
             letter-spacing: 2px;
+            cursor: pointer;
           }
 
           .modal-btn1 {
@@ -129,6 +120,7 @@
             font-weight: 900;
             // display: none;
             letter-spacing: 2px;
+            cursor: pointer;
           }
         }
       }
