--- a/src/05-member/style/profile-pages/UserProfile.scss
+++ b/src/05-member/style/profile-pages/UserProfile.scss
@@ -128,10 +128,10 @@
             background: #2b325c;
             color: #fff;
             font-weight: 900;
+            text-align: center;
             text-decoration: none;
-            // text-align: center;
-            cursor: pointer;
-            padding-top: 10px;
+
+            padding-top: 12px;
 
             // border: 1px solid red;
           }
