--- a/src/05-member/style/components/UserProfileTmp.scss
+++ b/src/05-member/style/components/UserProfileTmp.scss
@@ -191,7 +191,7 @@ $s-padding-top: 100px;
       position: absolute;
       left: 750px;
 
-      // border: 1px solid red;
+      border: 1px solid red;
       // background-color: red;
     }
 
