--- a/src/05-member/style/components/YellowWave.scss
+++ b/src/05-member/style/components/YellowWave.scss
@@ -18,7 +18,7 @@
     width: 20%;
     min-height: 100vh;
     background: {
-      image: url(../../../public/05-member/wave-1920px.png);
+      image: url(../../../../public/05-member/wave-1920px.png);
       // repeat: no-repeat;
       position: 50% 0;
       size: 100px 1920px;
