--- a/src/05-member/style/profile-pages/LikesForum.scss
+++ b/src/05-member/style/profile-pages/LikesForum.scss
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  border: 1px solid red;
+  // border: 1px solid red;
 
   .s-l-f-title {
     font-size: 30px;
@@ -20,7 +20,7 @@
   .s-l-f-card {
     position: relative;
     width: 100%;
-    height: 420px;
+    height: 550px;
     background: #fff;
     border-radius: 20px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
@@ -28,7 +28,7 @@
     padding: 15px;
     // background: linear-gradient(45deg, #ffebbd, #ffd374f4, #faa7ec);
 
-    border: 1px solid green;
+    // border: 1px solid green;
 
     .s-l-f-card-inside {
       width: 100%;
