--- a/src/05-member/style/profile-pages/UserProfile.scss
+++ b/src/05-member/style/profile-pages/UserProfile.scss
@@ -170,8 +170,10 @@
 
 @media (max-width: 991px) {
   .s-up {
-    overflow: scroll;
+    // overflow-x: fixed;
     height: 100%;
+
+    // border: 1px solid red;
 
     .s-up-card {
       height: 600px;
