--- a/src/02-forum/styles/InnerOfficial.scss
+++ b/src/02-forum/styles/InnerOfficial.scss
@@ -14,7 +14,7 @@ $p:16px;
     display: flex;
     position: relative;
     width: 100%;
-    
+    height: auto;
     .sidBar{
         position: fixed;
     }
@@ -112,6 +112,7 @@ $p:16px;
     .p-commentWrap{
         width: 100%;
         margin-top: 100px;
+       margin-bottom: 200px;
         .p-commentTitle{
             border-top: 2px solid $main-text;
             padding-top: 20px;
