--- a/src/02-forum/styles/Card.scss
+++ b/src/02-forum/styles/Card.scss
@@ -60,7 +60,7 @@ $p:16px;
     }
 }
 .p-crad-h:nth-child(2n+2){
-    background-color: #FAD249;
+    background-color: #FFDC96;
 }
 .p-crad-h:nth-child(2n+3){
     background-color:#FFF3CB;
