--- a/src/02-forum/styles/InnerCook.scss
+++ b/src/02-forum/styles/InnerCook.scss
@@ -14,6 +14,7 @@ $p:16px;
     display: flex;
     position: relative;
     width: 100%;
+    height: auto;
     .sidBar{
         position: fixed;
     }
@@ -239,13 +240,12 @@ $p:16px;
     }
     }
     .p-checkAdWrit{
-        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         position: fixed;
         left: 83%;
-        top: 30%;
+        bottom: 10%;
         .p-checkStep{
         width: 230px;
         background-color: $main-yellow;
