--- a/src/05-member/style/profile-pages/LikesProduct.scss
+++ b/src/05-member/style/profile-pages/LikesProduct.scss
@@ -33,7 +33,9 @@
     .s-l-p-card-inside {
       width: 100%;
       height: 100%;
-      overflow: auto;
+      display: flex;
+      flex-wrap: wrap;
+      overflow-y: scroll;
 
       .s-l-p-data {
         display: flex;
@@ -97,10 +99,79 @@
         }
       }
 
+
       .s-l-p-data-error {
         font-size: 24px;
       }
+      .r-love-card-container {
+        width: 23%;
+        margin: 5px;
+        // border: 1px solid #000;
+        .r-love-card-title {
+          height: 30px;
+          background-color: #113f75;
+          border-radius: 10px 10px 0 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          i {
+            color: #f00;
+            text-align: center;
+            font-size: 20px;
+          }
+        }
+        .r-love-card-cover-middle {
+          padding: 5px;
+          display: flex;
+          justify-content: center;
+          border: 1px solid #000;
+          .r-love-card-cover-wrap {
+            width: 180px;
+            height: 100px;
+            overflow: hidden;
 
+            // border: 1px solid red;
+
+            .r-love-card-cover {
+              width: 100%;
+              // object-fit: cover;
+              // object-position: 50% 80%;
+            }
+          }
+        }
+        .r-love-card-footer {
+          height: 50px;
+          background-color: #113f75;
+          border-radius: 0 0 10px 10px;
+          padding: 0 10px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          .r-love-card-name {
+            font-size: 16px;
+            color: #fff;
+            text-align: center;
+          }
+          .r-love-card-info {
+            font-size: 14px;
+            color: #fff;
+            text-align: center;
+          }
+        }
+      }
+    }
+
+    .s-l-p-card-inside::-webkit-scrollbar-track {
+    }
+
+    .s-l-p-card-inside::-webkit-scrollbar {
+      width: 10px;
+      height: 10px;
+    }
+
+    .s-l-p-card-inside::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: #b1b1b1;
     }
   }
 
@@ -114,18 +185,5 @@
         }
       }
     }
-  }
-
-  .s-l-p-card::-webkit-scrollbar-track {
-  }
-
-  .s-l-p-card::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-
-  .s-l-p-card::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: #b1b1b1;
   }
 }
